# PageIndex

./: pyproject.toml  requirements.txt
pageindex/: client.py
pageindex/backend/: cloud.py
