[project]
name = "pageindex"
version = "0.1.0"
description = "Vectorless reasoning-based RAG with hierarchical tree indexing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">= 3.10"
dependencies = [
    "litellm>=1.83.0",
    "pymupdf>=1.26.4",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
agents = ["openai-agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pageindex"]
